# switcher2

./: Cargo.toml  README.md
benches/: switcher2_benchmark.rs
examples/: generator_with_drop.rs
src/: lib.rs
tests/: stack_test.rs  switch_test.rs
